--- a/src/templates/invoice-from-pharmacy.ejs
+++ b/src/templates/invoice-from-pharmacy.ejs
@@ -559,7 +559,7 @@
                                                                                             <h1 class=t32
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 Your Invoice from
-                                                                                                [Pharmacy Name] &ndash;
+                                                                                                <%= pharmacy_name %> &ndash;
                                                                                                 Payment Confirmed</h1>
                                                                                         </td>
                                                                                     </tr>
@@ -592,8 +592,7 @@
                                                                                             <p class=t39
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 Dear <span class=t38
-                                                                                                    style="margin:0;Margin:0;font-weight:600;mso-line-height-rule:exactly;">[Pharmacy
-                                                                                                    Name]</span>,</p>
+                                                                                                    style="margin:0;Margin:0;font-weight:600;mso-line-height-rule:exactly;"><%= patient_name %></span>,</p>
                                                                                         </td>
                                                                                     </tr>
                                                                                 </table>
@@ -658,7 +657,7 @@
                                                                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:300;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                                                                 Your order for the
                                                                                                 prescribed medicines
-                                                                                                from [Pharmacy Name] has
+                                                                                                from <%= pharmacy_name %> has
                                                                                                 been successfully
                                                                                                 confirmed. You can
                                                                                                 download your invoice
@@ -750,9 +749,9 @@
                                                                                     <tr>
                                                                                         <td class=t70
                                                                                             style="overflow:hidden;background-color:#1B3F6D;text-align:center;line-height:24px;mso-line-height-rule:exactly;mso-text-raise:3px;padding:8px 8px 8px 8px;border-radius:27px 27px 27px 27px;">
-                                                                                            <span class=t68
+                                                                                            <a href="<%= invoice_url %>" class=t68
                                                                                                 style="display:block;margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:24px;font-weight:600;font-style:normal;font-size:15px;text-decoration:none;direction:ltr;color:#E3F0FF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">Download
-                                                                                                Invoice</span></td>
+                                                                                                Invoice</a></td>
                                                                                     </tr>
                                                                                 </table>
                                                                             </td>
